metrique/tests/ui/fail/timesource_guard_not_send_sync.stderr
error[E0277]: `*const ()` cannot be shared between threads safely
  --> tests/ui/fail/timesource_guard_not_send_sync.rs:11:17
   |
11 |     assert_sync(&_mock_time);
   |     ----------- ^^^^^^^^^^^ `*const ()` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `ThreadLocalTimeSourceGuard`, the trait `Sync` is not implemented for `*const ()`
note: required because it appears within the type `PhantomData<*const ()>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `ThreadLocalTimeSourceGuard`
  --> $WORKSPACE/metrique-timesource/src/lib.rs
   |
   | pub struct ThreadLocalTimeSourceGuard {
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
  --> tests/ui/fail/timesource_guard_not_send_sync.rs:5:19
   |
5  | fn assert_sync<S: Sync>(_s: &S) {}
   |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `*const ()` cannot be sent between threads safely
  --> tests/ui/fail/timesource_guard_not_send_sync.rs:12:17
   |
12 |     assert_send(&_mock_time);
   |     ----------- ^^^^^^^^^^^ `*const ()` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `ThreadLocalTimeSourceGuard`, the trait `Send` is not implemented for `*const ()`
note: required because it appears within the type `PhantomData<*const ()>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `ThreadLocalTimeSourceGuard`
  --> $WORKSPACE/metrique-timesource/src/lib.rs
   |
   | pub struct ThreadLocalTimeSourceGuard {
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/ui/fail/timesource_guard_not_send_sync.rs:6:19
   |
6  | fn assert_send<S: Send>(_s: &S) {}
   |                   ^^^^ required by this bound in `assert_send`
